--- a/app/resources/sinistro_tipo_acao.css
+++ b/app/resources/sinistro_tipo_acao.css
@@ -17,13 +17,13 @@
 }
 
 .cabecalho {
-    padding: 14px;
+    padding: 30px;
     border: 1px solid #000000;
     font-size: 12px;
 }
 
 body {
-    margin-top: 3.3cm;
+    margin-top: 3.8cm;
     margin-bottom: 1cm;
 }
 
@@ -82,6 +82,22 @@ body {
 .borda_direita {
     border-right: 1px solid black;
     text-align: center;
+}
+
+.logo_a_esquerda {
+    float: left;
+    width: 110px;
+    height: auto;
+    margin-right: 10px;
+    margin-top: -8px;
+}
+
+.logo_a_direita {
+    float: right;
+    width: 75px;
+    height: auto;
+    margin-left: 10px;
+    margin-top: -8px;
 }
 
 .header {
